# micropythonwebserver

./: boot.py  bootlib.py  readme.md  secrets.py
TMCStepper/: .gitignore  CMakeLists.txt  README.md  example.cpp  examplemodule.c  examplemodule.h  micropython.cmake  setup.py
TMCStepper/examples/Simple/: Simple.cpp
TMCStepper/python/src/: main.cpp
TMCStepper/src/: TMCStepper.h
TMCStepper/src/source/: CHOPCONF.cpp  COOLCONF.cpp  DRVCONF.cpp  DRVCTRL.cpp  DRVSTATUS.cpp  DRV_CONF.cpp  DRV_STATUS.cpp  GCONF.cpp  PWMCONF.cpp  SERIAL_SWITCH.h  SGCSCONF.cpp  SMARTEN.cpp  SW_SPI.h  TMC2130Stepper.cpp  TMCStepper.cpp  pythonesp32.h
TMCStepper/test/: libtest.py  pure.py
cexample/: examplemodule.c  fomu-flash.c  fomu-flash.h  micropython.cmake  micropython.mk  notes.md  rpi.c
fomuflash/: README.md  fomu-flash.c  fomu-flash.h  fpga.c  micropython.cmake  micropython.mk  pythonwrap.c  rpi.c  rpi.h  spi.c
